<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/headerpagebg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:background="@drawable/btuback" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/room_list"
            android:textColor="@color/black"
            android:textSize="24sp" >
        </TextView>

        <Button
            android:id="@+id/chat_right_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_refrsh" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/roon_ranking"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/roon_name"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/roon_viewpoint"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/roon_popularity"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/roon_status"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/roon_operation"
            android:textColor="@color/white" />
    </LinearLayout>

    <joey.present.view.ui.PullDownListView
        android:id="@+id/zhibo_room_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >
    </joey.present.view.ui.PullDownListView>
    <!-- <ListView
        android:id="@+id/zhibo_room_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >
    </ListView> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" 
        android:layout_gravity="bottom"
        android:gravity="right|center_vertical"
        android:paddingRight="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tuichu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:text="退出登录" />
    </LinearLayout>

</LinearLayout>