<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/headerpagebg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:background="@drawable/btuback" />

        <ImageButton
            android:id="@+id/editbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/iconedit" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/ht_optional"
            android:textColor="@color/black"
            android:textSize="24sp" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/yellowbar_height"
        android:background="@drawable/head"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/headcolumnhead"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:dividerHeight="1dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/headpricename"
                android:layout_width="100.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="名称"
                android:textColor="@color/white"
                android:textSize="19dip" >
            </TextView>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/more" />
        </RelativeLayout>

        <joey.present.view.ui.SyncHorizontalScrollView
            android:id="@+id/scrollListHead"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scrollbarSize="0.0sp"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/headcolumnheadmov"
                android:layout_width="885.0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/headlast"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_last"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headopen"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_open"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headhigh"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_high"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headlow"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_low"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headclose"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_close"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headupdown"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_updown"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headupdownrate"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_updownrate"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headvolume"
                    android:layout_width="85.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_volume"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headsettle"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_settle"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headaverage"
                    android:layout_width="75.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_average"
                    android:textColor="@color/white"
                    android:textSize="19dip" />

                <TextView
                    android:id="@+id/headturnover"
                    android:layout_width="125.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/price_turnover"
                    android:textColor="@color/white"
                    android:textSize="19dip" />
            </LinearLayout>
        </joey.present.view.ui.SyncHorizontalScrollView>
    </LinearLayout>
    <!-- <include layout = "@layout/priceitem" /> -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarSize="0.0sp"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/listHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/priceNameListView"
                android:layout_width="100.0dip"
                android:layout_height="wrap_content"
                android:divider="#FFFFFF"
                android:fastScrollEnabled="false"
                android:scrollbars="none" >
            </ListView>

            <joey.present.view.ui.SyncHorizontalScrollView
                android:id="@+id/scrollList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbarSize="0.0sp"
                android:scrollbars="none" >

                <ListView
                    android:id="@+id/priceListView"
                    android:layout_width="750.0dip"
                    android:layout_height="wrap_content"
                    android:divider="#FFFFFF"
                    android:fastScrollEnabled="false"
                    android:scrollbars="none" >
                </ListView>
            </joey.present.view.ui.SyncHorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>